fix - Improved readability of Vote component

--- a/src/App.css
+++ b/src/App.css
@@ -320,7 +320,7 @@ button {
 }
 .down:hover {
   transform: scale(1.3);
-  fill: #fe673a;
+  color: #fe673a;
 }
 
 .p-likes {
@@ -334,63 +334,6 @@ button {
   font-size: small;
   color: #515151;
   margin-block-start: 0.8em;
-}
-
-.background {
-  background-image: linear-gradient(
-      rgba(32, 78, 58, 0.5),
-      rgba(32, 78, 58, 0.5)
-    ),
-    url("../src/pics/coop.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
-  background-blend-mode: multiply;
-  max-width: 100%;
-}
-
-.landing {
-  font-family: "fredbones";
-  color: white;
-  font-size: 7rem;
-  margin: 0;
-}
-.landingtext {
-  color: white;
-  font-size: 1.5rem;
-  margin: 0;
-  font-weight: 600;
-  width: 90vw;
-}
-
-.landing-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.enter {
-  background-color: #fe673a;
-  box-shadow: 0px 0px 15px 0px #301934;
-  display: inline-block;
-  cursor: pointer;
-  color: black;
-  font-family: Arial;
-  font-size: 1.5rem;
-  padding: 5px 15px;
-  text-decoration: none;
-  font-weight: 700;
-  margin: 1em;
-  margin-top: 2rem;
-}
-
-.enter:hover {
-  transform: scale(1.1);
-  background: #fa450e;
 }
 
 .about {
@@ -409,4 +352,12 @@ button {
   margin-right: auto;
   max-width: 60rem;
   padding-bottom: 6rem;
+}
+
+.up {
+  height: 1.2rem;
+}
+
+.down {
+  height: 1.2rem;
 }
